# sulguk

./: .coveragerc  .gitignore  .ruff.toml  README.md  example.html  example.py  example_poll.py  example_transparent.py  pyproject.toml  pytest.ini  requirements_dev.txt  ruff.toml
.github/workflows/: relator.yml  setup.yml
src/html2tg/: aiogram_proxy.py  entities.py  state.py  transformer.py
src/sulguk/: __init__.py  aiogram_middleware.py  canvas.py  data.py  entities.py  mapper.py  numbers.py  state.py  transformer.py  tree_builder.py  walker.py  wrapper.py
src/sulguk/entities/: __init__.py  base.py  decoration.py  emoji.py  list.py  no_contents.py  progress.py  stub.py  text.py  wrapper.py
src/sulguk/post_manager/: chat_info.py  cli.py  editor.py  exceptions.py  file.py  links.py  params.py  sender.py
src/sulguk/render/: __init__.py  canvas.py  numbers.py  state.py
src/sulguk2/: __init__.py  mapper.py  parse.py  tree_builder.py  wrapper.py
tests/: conftest.py  test_blockquote.py  test_img.py  test_malformed_html.py  test_parse.py  test_pre_language.py  test_spaces.py
tests/fixtures/: supported_tags.html
tests/post_manager/: test_links.py
tests/sulguk2/: basic.html  comprehensive.html  hello_world.html  tags.html  test_equivalence.py
