[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "sulguk"
version = "0.11.1"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
readme = "README.md"
description = "Converter HTML to Telegram Entities"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "html5lib~=1.0",
    "lxml",
]
[project.optional-dependencies]
cli = [
    "aiogram",
]
[project.scripts]
sulguk = "sulguk.post_manager.cli:cli"

[project.urls]
"Homepage" = "https://github.com/tishka17/sulguk"
"Bug Tracker" = "https://github.com/tishka17/sulguk/issues"
